ver. 0.9.9.7.6
- solved the bug wrong units on start up without the preference file
  I needed to replace gscreen.status with my my own status, because gscreen 
  does deliver wrong values!

ver. 0.9.9.7.5
- typo in initialize_preferences 
- deleted the statusbar widget
- no more option to use gscreen error handling
- no more option to use desktop notify
- the optional stops button worked oposite it should
- renamed some stuff from emc to linuxcnc or shortend the names
- onboard keyboard showing in edit mode corrected
- plasma.py changed order of getting widgets from builder, 
  to avoid errors at load time
- notification change line wrape mode to caracter, 
  so longer file names will not be cut

ver. 0.9.9.7.4
- the default tool change dialog now shows 
  the tool number and the tool description
- after deleting the preferences file you get an error starting the GUI, 
  because it tried to load a file " ", I deleted the SPACE to solve that

ver. 0.9.9.7.3
- plasma screen now hide also the vel_info_box
- minimal changes on the glade files
- modified the plasma.py file to suport persistance variables
  the settings will be stored in plasma.var in your config dir
- I set the plasma.py file under GPL license

ver. 0.9.9.7.2
- introduced an better gcode highlight for sourceview

ver. 0.9.9.7.1
- replaced the hal_scale_jog_vel with a normal scale,
  as there is no need for a additional hal pin
- renamed hal pin 
  gscreen.hal_hbar_spindle_feedback to be gscreen.spindle_feedback_bar
  gscreen.hal_led_spindle_at_speed to be gscreen.spindle_at_speed_led
  This way all spindle pins are together in halshow 

ver. 0.9.9.7
- make gmoccapy react to external mode changes, i.e. start program with
  net start halui.mode.auto => halui.program.run <= hardware.button

ver. 0.9.9.6.3
- changed again the plasma layout, as Marius still want more widgets
- most hal labels are not needed any more, so I changed them to gtk.label

ver- 0.9.9.6.2